# valorant-manager

./: Cargo.toml  LICENSE  README.md  project_plan.md
src/: app.rs  main.rs
src/game/: economy.rs  match_simulation.rs  mod.rs  player.rs  team.rs  tournament.rs
src/ui/: finance.rs  main_menu.rs  mod.rs  schedule.rs  scouting.rs  squad.rs  tactics.rs
